--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
   <div class='col-12'>
     <div class="row">
-      <h2>WHY THIS DEMO SOFTWARE?</h2>
+      <h2>WHY THIS PROGRAM?</h2>
     </div>
   </div>
 
